添加视频功能

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="/oss/plupload-2.1.2/js/plupload.full.min.js"></script>
   </body>
 </html>
