栏目管理完成

--- a/public/index.html
+++ b/public/index.html
@@ -14,5 +14,11 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="/oss/plupload-2.1.2/js/plupload.full.min.js"></script>
+    <!-- <script src="/oss/crypto1/crypto/crypto.js"></script>
+    <script src="/oss/crypto1/hmac/hmac.js"></script>
+    <script src="/oss/crypto1/sha1/sha1.js"></script>
+    <script src="/oss/base64.js"></script>
+    <script src="/oss/upload1.js"></script> -->
+
   </body>
 </html>
